samples/_failures_safe/1761317943_062f74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9bd07d8.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_e9bd07d8.c:170:22: error: expected ‘)’ at end of input
  170 |         strncpy(token
      |                ~     ^
      |                      )
./samples/SAFE/__tmp_e9bd07d8.c:170:9: error: too few arguments to function ‘strncpy’
  170 |         strncpy(token
      |         ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_e9bd07d8.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_e9bd07d8.c:170:9: error: expected declaration or statement at end of input
  170 |         strncpy(token
      |         ^~~~~~~
./samples/SAFE/__tmp_e9bd07d8.c:170:9: error: expected declaration or statement at end of input
